Fixed contact button on mobile

--- a/blocks/contact/stylesheet.css
+++ b/blocks/contact/stylesheet.css
@@ -62,6 +62,5 @@ textarea {
 	display: block;
 	font-family: inherit;
 	cursor: pointer;
-}
-	font-size: inherit;
+	-webkit-appearance: button;
 }
